overflow auto to sections for some responsive fix.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,19 +13,20 @@ body {
 
 .main-header{
     height:4rem;
-    margin:0px 0px 10px;
     display:flex;
     justify-content:center;
     align-items: center;
     background:purple;
     color:white;
     font-size:2rem;
-    box-shadow:0px 2px 4px 4px #333;  
+    box-shadow:0px 2px 4px 0px #333;  
 }
 .main-nav{
-    padding:0 0 10px;
     display:flex;
+    align-items: center;
     background:white;
+    margin:5px auto;
+    padding:3px;
 }
 
 
@@ -33,20 +34,13 @@ body {
     width:99%;
     min-height:800px;
     margin:0 auto;
-    display:flex;
-    flex-direction: column;
     background:rgb(23, 17, 27);
 }
 
 .module-header{
-    margin:0 0 2rem;
+    margin-bottom:10px;
     padding:0 1rem;
-    position:sticky;
-    top:0;
     display:flex;
-    flex-direction: row;
-    flex-wrap:wrap;
-    justify-content:space-between;
     align-items: center;
     background:purple;
     color:white;
@@ -56,43 +50,37 @@ body {
 }
 
 .module-nav{
-    padding:0 1rem 10px;
     display:flex;
-    justify-content:space-between;
+    justify-content:flex-end;
+    align-items: center;
+    margin-bottom:10px;
+    padding:0 1rem;
 }
 
 .section {
-    display:flex;
-    flex-direction:row;
-    flex-wrap:wrap;
-    margin:0 auto 1rem;
-    padding:0 1rem 4rem;
+    margin:auto;
+    padding:0 10px 4rem;
     background:white;
-    width:98%;
+    width:99%;
     border-radius:3px;
-    box-shadow:0px 4px 10px 4px rgba(0,0,0,0.5);  
-    overflow:hidden;
+    box-shadow:0px 2px 4px 0 rgba(0,0,0,0.5);  
+    overflow:auto;
 }
 
 .section-header{
     height:2rem;
-    margin:0px 0px 1rem;
     padding:5px;
     display:flex;
     align-items: center;
     background-color:deepskyblue;
     color:white;
     font-size:1.2rem;
-    border-radius:3px 3px 0px 0px;
 }
 
 .section-nav{
-    padding:0 0 10px;
-    display:flex;
-    flex-direction:row;
-    justify-content:center;
-    flex-wrap:wrap;
+    min-height:5px;
     background:white;
+    text-align:center;
 }
 
 
@@ -100,17 +88,16 @@ body {
 
 
 input, select, textarea{
-    max-width:100px;
-    padding:6px 10px;
-    font-size:1rem;
+    width:50%;
+    padding:8px 5px;
     color:blue;
     text-align:left;
     border:1px solid lightgrey;
-    border-radius:3px;
+    border-radius:2px;
 }
 
 textarea {
-    width:95%;
+    width:100%;
     resize: vertical;
 }
 
@@ -157,11 +144,11 @@ button {
 }
 
 button:hover{
-    background:green;  
+    background:darkorchid;  
 }
 
 button:active{
-    transform:scale(0.9);
+    transform:scale(0.95);
 }
 
 button:disabled{
@@ -175,6 +162,8 @@ button:disabled{
     height:30px;
     padding:0px;
     font-size:16px;
+    box-shadow:none;
+    border-radius:50%;
 }
 
 
@@ -188,36 +177,27 @@ button:disabled{
 
 td {
     text-align:center;
+    font-size:1.2rem;
+    padding:0 5px;
 }
 
-tr.name-row td{
-    padding:6px 0;
-    background:purple;
-    color:white; 
-    font-size:1.5rem;
-    border-bottom:5px solid white;
-}
 tr.head-row td{
-    padding:6px 0;
+    padding:4px 0;
     background:deepskyblue;
     color:white;
-    border-bottom:1px dashed white;
-    
+    border-bottom:1px dashed white;   
 }
 
 tr.unit-row td{
-    padding:6px 0;
+    padding:3px 0;
     background-color:deepskyblue;
     color:white;
-    border-bottom:1px dashed white;
     font-size:0.9rem; 
 }
 
 tr.data-row td{
-    color:grey;
     padding:12px 0;
-    border:15px ridge;
-    border-width:0 0 1px;
+    border-bottom:1px ridge lightgrey ;
 }
 
 tr.total-row td {
@@ -237,15 +217,4 @@ tr.data-row td.name-col{
 .hdn {
     display:none;  
 }
-
-.cbx {
-    display:inline-flex;
-    justify-content:center;
-    align-items:center;
-}
-
-.card {
-    box-shadow:0px 4px 8px 2px rgba(0,0,0,0.5);   
-}
-
 /* //////////////////////////////////specific */
